# my_site

./: .gitignore  Pipfile  README.md  pyproject.toml
src/my_site/: __init__.py  inicio.py
src/my_site/static/: style.css
src/my_site/templates/: base.html
src/my_site/templates/inicio/: index.html
src/my_site_calupoh/: __init__.py
